--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,9 +1,16 @@
-- name: Deploy via SSH
-  uses: appleboy/ssh-action@v0.1.10
-  with:
-    host: ${{ secrets.SSH_HOST }}
-    username: ${{ secrets.SSH_USERNAME }}
-    key: ${{ secrets.SSH_PRIVATE_KEY }}
-    script: |
-      cd /var/www/html
-      git pull origin main
+  - name: Deploy to Staging server
+    uses: easingthemes/ssh-deploy@main
+    with:
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      ARGS: "-rlgoDzvc -i"
+      SOURCE: "dist/"
+      REMOTE_HOST: ${{ secrets.SSH_HOST }}
+      REMOTE_USER: ${{ secrets.SSH_USERNAME }}
+      EXCLUDE: "/dist/, /node_modules/"
+      SCRIPT_BEFORE: |
+        whoami
+        ls -al
+      SCRIPT_AFTER: |
+        whoami
+        ls -al
+        echo $RSYNC_STDOUT
