--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,16 +1,28 @@
-  - name: Deploy to Staging server
-    uses: easingthemes/ssh-deploy@main
-    with:
-      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      ARGS: "-rlgoDzvc -i"
-      SOURCE: "dist/"
-      REMOTE_HOST: ${{ secrets.SSH_HOST }}
-      REMOTE_USER: ${{ secrets.SSH_USERNAME }}
-      EXCLUDE: "/dist/, /node_modules/"
-      SCRIPT_BEFORE: |
-        whoami
-        ls -al
-      SCRIPT_AFTER: |
-        whoami
-        ls -al
-        echo $RSYNC_STDOUT
+name: Node CI
+
+on: [push]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16.x'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build --if-present
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@main
+      with:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ARGS: "-rlgoDzvc -i --delete"
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{ secrets.SSH_HOST }}
+          REMOTE_USER: ${{ secrets.SSH_USER }}
+          EXCLUDE: "/dist/, /node_modules/"
