--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -25,5 +25,5 @@ jobs:
           SOURCE: "dist/"
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
-          TARGET: ${{ secrets.REMOTE_TARGET }}
+          TARGET: ${{ secrets.SSH_TARGET }}
           EXCLUDE: "/dist/, /node_modules/"
