--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
         REMOTE_HOST: ${{ secrets.SSH_HOST }}
         REMOTE_USER: ${{ secrets.SSH_USERNAME }}
         TARGET: ${{ secrets.SSH_TARGET }}
-        SOURCE: "./"                      # Copia todo el repositorio
+        SOURCE: "./"
         ARGS: "-rlgoDzvc --delete"
         EXCLUDE: "node_modules/, cypress/, .github/, doc/, .gitignore, cypress.config.js, package*.json, README.md"
